@@ -1,3 +1,7 @@
+2012-07-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-12-03
+        * Use explicit CLHEP namespace.
+
 2012-06-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-12-02
         * Updates from Hardeep.
